<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.0</version>
        <relativePath/>
    </parent>

    <groupId>nu.ndw.nls</groupId>
    <artifactId>routing-map-matcher-parent</artifactId>
    <version>10.0.2-SNAPSHOT</version>
    <name>routing map matcher parent</name>
    <description>Routing Map Matcher modules containing the core library and spring boot starter modules</description>
    <packaging>pom</packaging>
    <modules>
        <module>map-matcher-library</module>
        <module>map-matcher-geometry</module>
    </modules>
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
        <graphhopper.version>8.0</graphhopper.version>
        <!-- Janino version should match the one used in GraphHopper -->
        <janino.version>3.1.12</janino.version>
        <jts-core.version>1.19.0</jts-core.version>
        <guava.version>33.2.0-jre</guava.version>
        <hamcrest.version>2.2</hamcrest.version>
        <jacoco.version>0.8.12</jacoco.version>
        <geotools.version>30.2</geotools.version>
        <jts2geojson.version>0.18.1</jts2geojson.version>
        <commons-io.version>2.16.1</commons-io.version>
        <sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
        <sonar.projectName>nls-routing-map-matcher</sonar.projectName>
        <nls-geometry.version>3.0.0</nls-geometry.version>
        <kryo5.version>5.5.0</kryo5.version>
    </properties>
    <repositories>
        <repository>
            <id>NLS</id>
            <url>https://pkgs.dev.azure.com/ndwnu/NLS/_packaging/NLS/maven/v1</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>NLS</id>
            <url>https://pkgs.dev.azure.com/ndwnu/NLS/_packaging/NLS/maven/v1</url>
        </repository>
    </distributionManagement>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>nu.ndw.nls.geometry</groupId>
                <artifactId>nls-geometry</artifactId>
                <version>${nls-geometry.version}</version>
            </dependency>
            <dependency>
                <groupId>com.esotericsoftware.kryo</groupId>
                <artifactId>kryo5</artifactId>
                <version>${kryo5.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wololo</groupId>
                <artifactId>jts2geojson</artifactId>
                <version>${jts2geojson.version}</version>
                <scope>compile</scope>
            </dependency>
            <!-- Graphhopper -->
            <dependency>
                <groupId>com.graphhopper</groupId>
                <artifactId>graphhopper-core</artifactId>
                <version>${graphhopper.version}</version>
            </dependency>
            <!-- Fixes weird error see https://discuss.graphhopper.com/t/custommodelparser-error-when-parsing-priority-statement/7386/5-->
            <dependency>
                <groupId>org.codehaus.janino</groupId>
                <artifactId>janino</artifactId>
                <version>${janino.version}</version>
            </dependency>
            <dependency>
                <groupId>com.graphhopper</groupId>
                <artifactId>graphhopper-map-matching</artifactId>
                <version>${graphhopper.version}</version>
            </dependency>

            <!-- Utilities -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
                <scope>compile</scope>
            </dependency>
            <!-- Testing -->
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-library</artifactId>
                <version>${hamcrest.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <defaultGoal>clean verify</defaultGoal>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <configuration>
                        <!--
                        fixes java.lang.instrument.IllegalClassFormatException error on
                        com.graphhopper.routing.weighting.custom-->
                        <excludes>
                            <exclude>com.graphhopper.routing.weighting.custom.*</exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>prepare-agent-integration</id>
                            <goals>
                                <goal>prepare-agent-integration</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report-integration</id>
                            <goals>
                                <goal>report-integration</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <useSystemClassLoader>false</useSystemClassLoader>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
